# OpenPCDet

./: .gitignore  Makefile  pyproject.toml
pcdet/datasets/kitti/kitti_object_eval_python/: eval.py
pcdet/datasets/processor/: data_processor.py
pcdet/models/backbones_2d/map_to_bev/: pointpillar_scatter.py
pcdet/models/backbones_3d/vfe/: mean_vfe.py
pcdet/ops/iou3d_nms/: iou3d_nms_utils.py
tools/: bboxpvtcnn_to_kitti.py  bin_to_pcd.py  demo.py  evaluate_with_labels.py  filter_point_range.py  multi_demo.py  npy_to_pcd.py  pcd_to_npy.py  run_dl_inference_eval.py  wayside_pcd_to_npy.py
tools/cfgs/dataset_configs/: kitti_dataset.yaml
