[tool.poetry]
name = "openpcdet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.1"
llvmlite = "^0.38.1"
numba = "^0.55.1"
torch = "1.10"
easydict = "^1.9"
PyYAML = "^6.0"
scikit-image = "^0.19.2"
tqdm = "^4.64.0"
tensorboardX = "^2.5"
ptflops = "^0.6.8"
open3d =  "^0.13.0"
ninja = "^1.10.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
